[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-master-roman-urdu"
version = "1.0.0"
description = "Python Master — Roman Urdu mein Python seekhne ki complete app"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["python", "learning", "urdu", "education", "streamlit"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "streamlit>=1.28.0",
]

[project.scripts]
python-master = "python_master.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["python_master*"]
