[metadata]
name = python-master-roman-urdu
version = 1.0.0
description = Python Master — Roman Urdu mein Python seekhne ki complete app
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
python_requires = >=3.8

[options]
packages = find:
install_requires =
    streamlit>=1.28.0

[options.entry_points]
console_scripts =
    python-master = python_master.cli:main
